# Vietnamese-Dialect-Identification-Web-Application

./: .gitignore  AGENTS.md  OVERVIEW.md  PLAN.md  READING_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt
configs/: label_mapping.csv
data/processed/: class_counts.csv  metadata_issues.csv  missing_audio.csv  preprocessed_metadata.csv  selected_speaker_split_overlap.csv  speaker_counts.csv  speaker_split_overlap.csv  split_class_counts.csv
outputs/metrics/: baseline_results.json  cnn_results.json  cnn_test_confusion_matrix.csv  cnn_training_log.csv  cnn_valid_confusion_matrix.csv  final_comparison.csv  final_sample_errors.csv  logistic_regression_test_confusion_matrix.csv  logistic_regression_valid_confusion_matrix.csv  phowhisper_results.json  phowhisper_test_confusion_matrix.csv  phowhisper_test_predictions.csv  phowhisper_training_log.csv  phowhisper_valid_confusion_matrix.csv  svm_test_confusion_matrix.csv  svm_valid_confusion_matrix.csv
outputs/reports/: data_eda.md  error_analysis.md  phase1_dataset_summary.json  phase2_preprocessing_summary.json  phase4_baseline_report.md  phase5_cnn_report.md  phase6_phowhisper_report.md
reports/: implementation_report.md
src/: __init__.py
src/data/: prepare_metadata.py  preprocess_audio.py
src/evaluation/: __init__.py  final_evaluation.py
src/features/: logmel.py  mfcc.py
src/models/: __init__.py  cnn.py
src/training/: train_baseline.py  (+2 more)
tests/: test_audio_preprocessing.py  test_cnn.py  test_final_evaluation.py  test_logmel.py  test_mfcc.py  test_phowhisper.py  test_prepare_metadata.py
(+1 files in other folders)
